LIST OF CHANGES

release 86.5
 - small fix in locate_runfolder for rna seqc links
 - remove unused classes for image generation
 - be compatible with ClearPress version 475.3.3 and above
 - set explicit dist to precise in travis yml
 - add dual configuration for apache mpm worker/event
 - Jenkins' daemon with HTTPS as default configuration
 - drop or rename orphaned tables from db
   - drop
     cost_code
     cost_group
     sensor_data_instrument
     sensor_data
     sensor_instrument
     sensor
     mail_run_project_followers
   - rename
     event_type_service to todrop_event_type_service
     ext_service to todrop_ext_service
     event_type_subscriber to todrop_event_type_subscriber

release 86.4
 - reference find role: remove unused 'subset' attribute and
   previously deprecated 'single_ref_found' method 
 - increate http tmeout for event notification
 - run tracking server on two ports - one accepting http traffic, another
   one https only; the same set of URLs on both ports
 - tracking web GUI link to request LIMs page now changed to point to
   a more useful lane page; request id will not be available if XML
   LIMs feeds are discontinued
 - link to auth script residing in the same virtual host 
 - sensor-related code removed
 - mkfastq option added to make a samplesheet suitable for 10x mkfastq

release 86.3
 - event notification - do LIMs notification first; if it fails and is run
     multiple times as a consequence, users are not spammed

release 86.2
 - event notification:
     use faster ml warehouse st::api::lims driver (ml_warehouse_fc_cache)
     find templates directory relative to the running script bin
     fix npg tracking server url in reports' text
     filter out undefined email addresses
     bug fixes
 - remove models for db tables that are due to be dropped
 - update apache conf so server run with 1 thread/child w/mpm_worker_module
   Config::IniFiles used by ClearPress::util does not seem to be thread safe